--- a/hugo.toml
+++ b/hugo.toml
@@ -51,3 +51,7 @@ title = 'Through The Lens Photography by Martin Splitt'
 
 [[module.imports]]
   path = "github.com/halogenica/beautifulhugo"
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
